--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Title</title>
+    <title>reaction</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -10,13 +10,31 @@
     <!-- Bootstrap CSS v5.2.1 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <header>
-        <!-- place navbar here -->
+        <nav class="navbar  justify-content-center" id="nav">
+            <span class="navbar-brand mb-0 h1">Navbar</span>
+        </nav>
     </header>
-    <main></main>
+    <main>
+
+        <div class="container-fluid full-height d-flex justify-content-center">
+            <div class="row w-100">
+                <div class="col-4 mx-auto d-flex flex-column justify-content-start center-column text-center "
+                    id="coverthing">
+
+                    fortnite
+
+                </div>
+            </div>
+        </div>
+
+
+
+    </main>
     <footer>
         <!-- place footer here -->
     </footer>
@@ -28,6 +46,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
         integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
         crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
