thinngs were done

--- a/index.html
+++ b/index.html
@@ -21,17 +21,41 @@
     </header>
     <main>
 
-        <div class="container-fluid full-height d-flex justify-content-center">
-            <div class="row w-100">
-                <div class="col-4 mx-auto d-flex flex-column justify-content-start center-column text-center "
-                    id="coverthing">
+        <div class="container-fluid w-100 h-100  d-flex justify-content-center d-none">
+            <div class="row h-100 w-100">
+                <div
+                    class="col-4 mx-auto = d-flex flex-column justify-content-start justify-content-center center-column text-center bg-light fortnite">
 
-                    fortnite
+                    <div class="col-12 py-2">play</div>
+                    <div class="col-12 py-1">custom character</div>
+                    <div class="col-12 py-2">custom object</div>
 
                 </div>
             </div>
         </div>
 
+        <div class="container justify-content-center  text-center d-none">
+            <div class="row mt-5 py-3"><canvas id="myCanvas" width="75" height="35"
+                    style="border:1.5px solid #ff69c3; background-color: grey;">
+                </canvas></div>
+            <div class="row justify-content-center">
+                <div class="col-auto"><button>f</button></div>
+                <div class="col-auto"><button>f</button></div>
+                <div class="col-auto"><button>f</button></div>
+                <div class="col-auto"><button>f</button></div>
+                <div class="col-auto"><button>g</button></div>
+                <div class="col-auto"><button>g</button></div>
+                <div class="col-auto"><button>g</button></div>
+                <div class="col-auto"><button>g</button></div>
+                <div class="col-auto"><button>g</button></div>
+            </div>
+            <div class="row justify-content-end">
+                <div class="col-3"><button>f</button></div>
+            </div>
+        </div>
+        <div class="container">
+            .c
+        </div>
 
 
     </main>
