started game javaaaa

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="container-fluid w-100 h-100  d-flex justify-content-center d-none">
             <div class="row h-100 w-100">
                 <div
-                    class="col-4 mx-auto = d-flex flex-column justify-content-start justify-content-center center-column text-center bg-light fortnite">
+                    class="col-4 mx-auto d-flex flex-column justify-content-start justify-content-center center-column text-center bg-light fortnite">
 
                     <div class="col-12 py-2">play</div>
                     <div class="col-12 py-1">custom character</div>
@@ -54,7 +54,12 @@
             </div>
         </div>
         <div class="container">
-            .c
+            <div class="row text-center justify-content-center mt-5">
+                <div class="col-12 mt-5" onload="startGame()"></div>
+                <div class="col-auto"><button>Start Game</button></div>
+                <div class="col-auto"><button>Reset</button></div>
+                <div class="col-auto"><button>Home</button></div>
+            </div>
         </div>
 
 
