--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 
 <head>
-    <title>reaction</title>
-    <!-- Required meta tags -->
+    <title>Reaction Tester</title>
+    <!-- Required meta tagsff-->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
@@ -15,53 +15,65 @@
 
 <body>
     <header>
-        <nav class="navbar  justify-content-center" id="nav">
-            <span class="navbar-brand mb-0 h1">Navbar</span>
-        </nav>
+
+
+        <h1 class="navbar-brand mb-3 h1 text-center" id="nav">Reaction Game</h1>
+
+
     </header>
     <main>
 
-        <div class="container-fluid w-100 h-100  d-flex justify-content-center d-none">
-            <div class="row h-100 w-100">
-                <div
-                    class="col-4 mx-auto d-flex flex-column justify-content-start justify-content-center center-column text-center bg-light fortnite">
 
-                    <div class="col-12 py-2">play</div>
-                    <div class="col-12 py-1">custom character</div>
-                    <div class="col-12 py-2">custom object</div>
+
+
+        <div class="container justify-content-center align-content-center text-center" id="menu">
+
+            <div class="col-12 py-3  "><button onclick="startGame()">Start Game</button></div>
+            <div class="col-12 py-2 "><button onclick="loadStat()">stats</button></div>
+
+
+        </div>
+
+        <div class="container d-none" id="game">
+            <div class="col-12">
+                <h1>Test Your Reactions</h1>
+            </div>
+            <div class="col-12">
+                <p>Click on the boxes and circles as quickly as you can</p>
+            </div>
+            <div class="col-12">
+                <p class="bold">Your time:<span id="timeTaken"></span></p>
+            </div>
+
+            <div class="row ">
+                <div class="game-area">
+                    <div id="shape"></div>
 
                 </div>
             </div>
-        </div>
-
-        <div class="container justify-content-center  text-center d-none">
-            <div class="row mt-5 py-3"><canvas id="myCanvas" width="75" height="35"
-                    style="border:1.5px solid #ff69c3; background-color: grey;">
-                </canvas></div>
-            <div class="row justify-content-center">
-                <div class="col-auto"><button>f</button></div>
-                <div class="col-auto"><button>f</button></div>
-                <div class="col-auto"><button>f</button></div>
-                <div class="col-auto"><button>f</button></div>
-                <div class="col-auto"><button>g</button></div>
-                <div class="col-auto"><button>g</button></div>
-                <div class="col-auto"><button>g</button></div>
-                <div class="col-auto"><button>g</button></div>
-                <div class="col-auto"><button>g</button></div>
-            </div>
             <div class="row justify-content-end">
-                <div class="col-3"><button>f</button></div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="row text-center justify-content-center mt-5">
-                <div class="col-12 mt-5" onload="startGame()"></div>
-                <div class="col-auto"><button>Start Game</button></div>
-                <div class="col-auto"><button>Reset</button></div>
-                <div class="col-auto"><button>Home</button></div>
+                <div class="col-auto"><button onclick="loadStat()">Stats</button></div>
+                <div class=" col-auto"><button onclick="home()">Home</button></div>
             </div>
         </div>
 
+        <div class="container-fluid mt-5 justify-content-center d-none" id="stats">
+            <div class="row text-center">
+                <div class="col-12">
+                    <h1>Stats</h1>
+                </div>
+
+                <div class="col-12 justify-content-center " id="stat">
+                    <h1>All Times</h1>
+                    <ul id="allTimes" class="list-group mt-3"></ul>
+                </div>
+                <div class="row justify-content-end">
+                    <div class=" col-auto"><button onclick="home()">Home</button></div>
+                </div>
+
+
+            </div>
+        </div>
 
     </main>
     <footer>
