--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </div>
         </div>
 
-        <div class="container-fluid mt-5 justify-content-center d-none" id="stats">
+        <div class="container-fluid mt-5 justify-content-center d-none" id="stats" style = " background=color: #35353d;">
             <div class="row text-center">
                 <div class="col-12">
                     <h1>Stats</h1>
