--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         </div>
 
-        <div class="container d-none" id="game">
+        <div class="container text-center d-none" id="game">
             <div class="col-12">
                 <h1>Test Your Reactions</h1>
             </div>
